--- a/expensetracker/src/components/transactionform.css
+++ b/expensetracker/src/components/transactionform.css
@@ -16,7 +16,7 @@
 
     height: 60vh;
     width: 35vw;
-    background: red; /* Background color for the form container */
+    background: rgb(255, 255, 255); /* Background color for the form container */
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Add a shadow for the container */
@@ -28,16 +28,78 @@
     align-items: center;
   }
 
+/* Style for input and select elements */
+.formcontainer input,
+.formcontainer select,
+.formcontainer textarea {
+  font-size: 16pt; 
+  padding: 3px; 
+  width: 100%; 
+  box-sizing: border-box; 
+}
   .row{
     height: 10vh;
     display: block;
+    font-size: 18pt;
+    margin-bottom: 15px;
 
   }
 
   .close-button{
-    margin-right: 25px;
+    margin-right: 15px;
+    background-color: #FFFFFF;
+    border: 1px solid #222222;
+    border-radius: 8px;
+    box-sizing: border-box;
+    color: #222222;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,"Helvetica Neue",sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 20px;
+    outline: none;
+    padding: 13px 23px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    touch-action: manipulation;
+    transition: box-shadow .2s,-ms-transform .1s,-webkit-transform .1s,transform .1s;
+    user-select: none;
+    -webkit-user-select: none;
+    width: auto;
+    
+
   }
 
+  .submit-button{
+
+    background-color: #FFFFFF;
+    border: 1px solid #222222;
+    border-radius: 8px;
+    box-sizing: border-box;
+    color: #222222;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,"Helvetica Neue",sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 20px;
+    margin: 0;
+    outline: none;
+    padding: 13px 23px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    touch-action: manipulation;
+    transition: box-shadow .2s,-ms-transform .1s,-webkit-transform .1s,transform .1s;
+    user-select: none;
+    -webkit-user-select: none;
+    width: auto;
+    
+  }
+
+
+
  
-  
   
